--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
     "rewrites": [
-      { "source": "/(.*)", "destination": "/404.html" }
+        { "source": "/(.*)", "destination": "/" }
     ]
-  }
-  
+}
