--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
     "rewrites": [
         { "source": "/(.*)", "destination": "/" }
+    ],
+    "routes": [
+        { "src": "/(.*)", "status": 404, "dest": "/" }
     ]
 }
