--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "rellax": "^1.12.1",
     "vercel": "^32.5.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
