--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
+    "medium-zoom": "^1.1.0",
     "pinia": "^2.1.7",
     "rellax": "^1.12.1",
     "vercel": "^32.5.6",
